Making changes to the main page, changing the main picture and making it responsive

--- a/index.html
+++ b/index.html
@@ -27,34 +27,32 @@
   <title>Angeles' Web Page</title>
 </head>
 <body>
-  <div class="container d-flex justify-content-center custom-container">
-    <div class="row justify-content-center align-items-center">
-      <div class="col-md-6">
-        <img src="./images/20200906_202636_mfnr.jpg" alt="me">
+  <div class="container d-flex custom-page">
+    <div class="row d-flex">
+      <div class="col-md-7 custom-image">
+        <img
+          src="./images/angelesRondon.jpeg"
+          class="img-thumbnail custom"
+        />
       </div>
-      <div class="col-md-4 d-flex custom-description-card">
-        <div class="card col-md-12 mb-3 custom-card">
-          <div class="card-header d-flex">
-            <h2>
-              ÁNGELES RONDÓN
-            </h2>
-          </div>
-          <div class="card-body text-dark">
-            <h5 class="card-title">I'm a Front-End Developer</h5>
-            <p class="card-text">
-              I like design and when a website looks good. 
-              My skills include JavaScript, TypeScript, HTML5, CSS3,
-              Bootstrap, MDBootstrap, Angular, ReactJS, MongoDB and
-              NodeJS. 
-            </p>
-            <hr>
-            <button>
-              <a href="./websites/">
-                Portfolio
-              </a>
-            </button>
-          </div>
-        </div>
+      <div class="col-md-5">
+        <h2>
+          ÁNGELES RONDÓN
+        </h2>
+        <hr>
+        <h5>I'm a Front-End Developer</h5>
+        <p>
+          I like design and when a website looks good. 
+          My skills include JavaScript, TypeScript, HTML5, CSS3,
+          Bootstrap, MDBootstrap, Angular, ReactJS, MongoDB and
+          NodeJS. 
+        </p>
+        <hr>
+        <button>
+          <a href="./websites/">
+            Portfolio
+          </a>
+        </button>
       </div>
     </div>
   </div>
