Changing button main page. Changing media queries. Changing colors.

--- a/index.html
+++ b/index.html
@@ -35,24 +35,22 @@
           class="img-thumbnail custom"
         />
       </div>
-      <div class="col-md-5">
+      <div class=" d-flex col-md-5 custom-description">
         <h2>
           ÁNGELES RONDÓN
         </h2>
-        <hr>
-        <h5>I'm a Front-End Developer</h5>
-        <p>
-          I like design and when a website looks good. 
-          My skills include JavaScript, TypeScript, HTML5, CSS3,
-          Bootstrap, MDBootstrap, Angular, ReactJS, MongoDB and
-          NodeJS. 
-        </p>
-        <hr>
-        <button>
-          <a href="./websites/">
-            Portfolio
-          </a>
-        </button>
+        <div class="about">
+          <h5>I'm a Front-End Developer</h5>
+          <p>
+            I like design and when a website looks good. 
+            My skills include JavaScript, TypeScript, HTML5, CSS3,
+            Bootstrap, MDBootstrap, Angular, ReactJS, MongoDB and
+            NodeJS. 
+          </p>
+        </div>
+        <a href="./websites/">
+          Portfolio
+        </a>
       </div>
     </div>
   </div>
