--- a/websites/duzce-tentacion/index.html
+++ b/websites/duzce-tentacion/index.html
@@ -15,8 +15,8 @@
 
 <body>
 	<main>
-		<div class="d-flex justify-content-center align-items-center h-100 mb-2">
-			<div class="main">
+		<div class="d-flex justify-content-center align-items-center h-100">
+			<div class="d-flex main">
 				<h1>Düzce Tentación</h1>
 				<p>¡Personaliza tu pastel como quieras!</p>
 				<p>Ingresa y Cotiza</p>
@@ -31,6 +31,11 @@
 			</button>
 		</a>
 	</main>
+
+	<script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js">
+  </script>
 </body>
 
 </html>
