Flexbox changes in the footer.

--- a/websites/luxury-presence/index.html
+++ b/websites/luxury-presence/index.html
@@ -389,7 +389,7 @@
           </a>
         </div>
       </div>
-      <div class="d-flex number">
+      <div class="d-flex phone-number">
         <i class="fas fa-phone-alt"></i>
         <div class="information">
           <p>Phone Number</p>
