--- a/websites/index.html
+++ b/websites/index.html
@@ -23,14 +23,14 @@
           <div class="card img-wrap">
             <a href="./coffee-road/">
               <img
-                src="./coffee-road/images/coffeeandlandscape/buenavista-quindio-san-alberto.jpeg"
+                src="../images/coffe-road-main-image.jpeg"
                 class="card-img-top"
                 alt="..."
               />
               <div class="img-description">
                 <div class="img-text">
                   <h4>
-                    Coffe Road
+                    Coffee Road
                   </h4>
                   <p>
                     A simple website to know more about
@@ -46,7 +46,7 @@
           <div class="card img-wrap">
             <a href="./duzce-tentacion/">
               <img
-                src="./duzce-tentacion/images/fondo.jpg"
+                src="../images/duzce-tentation-main-image.jpeg"
                 class="card-img-top"
                 alt="..."
               />
@@ -69,7 +69,7 @@
           <div class="card img-wrap">
             <a href="./travelers/">
               <img
-                src="./travelers/images/termals-1.jpeg"
+                src="../images/travelers-main-image.jpeg"
                 class="card-img-top"
                 alt="..."
               />
@@ -84,6 +84,28 @@
                 </div>
               </div>
             </a>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card img-wrap">
+            <a href="../">
+              <img
+                src="../images/luxury-presence-main-image.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="img-description">
+                <div class="img-text">
+                  <h4>
+                    Luxury Presence
+                  </h4>
+                  <p>
+                    Single Page website.
+                  </p>
+                </div>
+              </div>
+            </a> 
           </div>
         </div>
 
