Add image link to Luxury Presence web page

--- a/websites/index.html
+++ b/websites/index.html
@@ -89,7 +89,7 @@
 
         <div class="col">
           <div class="card img-wrap">
-            <a href="../">
+            <a href="./luxury-presence/">
               <img
                 src="../images/luxury-presence-main-image.jpeg"
                 class="card-img-top"
