Add media queries to Small screens, ipads, etc.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <article class="my-description">
       I'm a Junior Front End developer and kinda a singer.
       I like to watch movies and keep learning so I can create amazing apps.
-      Also, I have a cat, Pinky, she's my hole world.
+      Also, I have a cat, Pinky, she's my whole world.
     </article>
   </section>
 
