Modify media queries and portfolio hyper link

--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@
     </article>
   </section>
 
-  <section>
-    <div class="portfolio">
+  <section class="portfolio">
+    <a href="./websites/">
       <h1>
-        <a href="./websites/">
-          Portfolio
-        </a>
+        Portfolio
       </h1>
-    </div>
+      <p>
+        Take a look at the websites I build!
+        (And still building)
+      </p>
+    </a>
   </section>
 
   <section class="technologies">
