Update main landing
  Add new job position, update layout and update dates.

--- a/index.html
+++ b/index.html
@@ -1,134 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Angeles' Web Page</title>
-</head>
-<body>
-  <section class="main-header">
-    <div class="header-distribution">
-      <div class="my-image">
-        <img
-            src="./images/angeles-rondon.jpeg"
-          />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Angeles' Web Page</title>
+  </head>
+  <body>
+    <section class="main-header">
+      <div class="header-distribution">
+        <div class="my-image">
+          <img src="./images/angeles-rondon.jpeg" />
+        </div>
+        <div class="description">
+          <article>
+            <h1>Software Developer</h1>
+            <p>
+              C'est une chose admirable, que tous les grands hommes ont toujours
+              du caprice, quelque petit grain de folie mêlé à leur science.
+            </p>
+            <p>-Moliére.</p>
+          </article>
+        </div>
       </div>
-      <div class="description">
-        <article>
-          <h2>
-            Junior web developer? Maybe
-          </h2>
-          <p>
-            C'est une chose admirable, que tous les grands
-            hommes ont toujours du caprice, quelque petit
-            grain de folie mêlé à leur science.
-          </p>
-          <p>
-            -Moliére.
-          </p>
-        </article>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="social-networks">
-    <div class="logo">
-      <a href="https://www.facebook.com/angelesrondonc/" target="_blank">
-        <i class="fa-brands fa-facebook"></i>
-      </a>
-    </div>
-    <div class="logo">
-      <a href="https://www.instagram.com/angelesemilianaa/" target="_blank">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-    </div>
-    <div class="logo">
-      <a href="https://www.linkedin.com/in/%C3%A1ngeles-rond%C3%B3n-01aab0226/" target="_blank">
-        <i class="fa-brands fa-linkedin"></i>
-      </a>
-    </div>
-    <div class="logo">
-      <a href="https://github.com/angelcorr" target="_blank">
-        <i class="fa-brands fa-github"></i>
-      </a>
-    </div>
-  </section>
-
-  <section class="main-description">
-    <article class="my-description">
-      I'm a Junior Front End developer and kinda a singer.
-      I like to watch movies and keep learning so I can create amazing apps.
-      Also, I have a cat, Pinky, she's my whole world.
-    </article>
-  </section>
-
-  <section class="portfolio">
-    <a href="./websites/">
-      <h1>
-        Portfolio
-      </h1>
-      <p>
-        Take a look at the websites I build!
-        (And still building)
-      </p>
-    </a>
-  </section>
-
-  <section class="technologies">
-    <div class="technology">
-      <div>
-        <i class="fa-brands fa-html5"></i>
-      </div>
-      <div>
-        <i class="fa-brands fa-css3-alt"></i>
-      </div>
-      <div>
-        <i class="fa-brands fa-js-square"></i>
-      </div>
-    </div>
-    <div class="technology">
-      <div>
-        <i class="fa-brands fa-react"></i>
-      </div>
-      <div>
-        <i class="fa-brands fa-angular"></i>
-      </div>
-      <div>
-        <i class="fa-brands fa-node-js"></i>
-      </div>
-    </div>
-  </section>
-
-  <section class="work">
-    <h2>
-      Work Experience
-    </h2>
-    <div class="work-experience">
-      <div class="crazystream-logo">
-        <a href="https://www.crazystream.co/" target="_blank">
-          <img src="./images/crazy-streamer-logo.png" alt="Crazystreamer logo">
+    <section class="social-networks">
+      <div class="logo">
+        <a
+          href="https://www.linkedin.com/in/%C3%A1ngeles-rond%C3%B3n-01aab0226/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
-      <div class="about-job">
-        <article class="job-description">
-          <h3>
-            Junior Front End Developer
-          </h3>
-          <strong>
-            Jan 02 2022 - Now
-          </strong>
-          <p>
-            As a junior front-end developer I help rewriting the old
-            Codeigniter code to JavaScript using Angular 12.
-          </p>
-        </article>
+      <div class="logo">
+        <a href="https://github.com/angelcorr" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="https://kit.fontawesome.com/b79b8b1ac4.js" crossorigin="anonymous"></script>
-  <script src="./main.js"></script>
-</body>
+    <section class="main-description">
+      <article class="my-description">
+        I'm a Software Developer and kinda a singer. I like to dance
+        and keep learning so I can create amazing apps. Also, I have two
+        cat, Pinky and Brain, they are my whole world.
+      </article>
+    </section>
+
+    <section class="portfolio">
+      <a href="./websites/">
+        <h2>Portfolio</h2>
+        <p>Take a look at the websites I build! (And still building)</p>
+      </a>
+    </section>
+
+    <section class="technologies">
+      <div class="technology">
+        <div>
+          <i class="fa-brands fa-html5"></i>
+        </div>
+        <div>
+          <i class="fa-brands fa-css3-alt"></i>
+        </div>
+        <div>
+          <i class="fa-brands fa-js-square"></i>
+        </div>
+      </div>
+      <div class="technology">
+        <div>
+          <i class="fa-brands fa-react"></i>
+        </div>
+        <div>
+          <i class="fa-brands fa-angular"></i>
+        </div>
+        <div>
+          <i class="fa-brands fa-node-js"></i>
+        </div>
+      </div>
+    </section>
+
+    <section class="work">
+      <h3>Work Experience</h3>
+      <div class="work-experience">
+        <div class="job">
+          <div class="company-logo">
+            <a href="https://www.crazystream.co/" target="_blank">
+              <img
+                src="./images/crazy-streamer-logo.png"
+                alt="Crazystreamer logo"
+              />
+            </a>
+          </div>
+          <div class="about-job">
+            <div>
+              <article class="job-description">
+                <h4>Junior Front End Developer</h4>
+                <strong> Jan 2022 - July 2022 </strong>
+                <p>
+                  As a junior front-end developer I help rewriting the old
+                  Codeigniter code to JavaScript using Angular 12.
+                </p>
+              </article>
+            </div>
+          </div>
+        </div>
+        <div class="job">
+          <div class="company-logo">
+            <a href="https://http://moove-it.com/" target="_blank">
+              <img src="./images/moove-it-logo.png" alt="Moove It logo" />
+            </a>
+          </div>
+          <div class="about-job">
+            <div>
+              <article class="job-description">
+                <h4>Software Developer</h4>
+                <strong> Aug 2022 - Now </strong>
+                <p>
+                  With my knowledge I help with the creation of landings,
+                  improving layouts and code.
+                </p>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="https://kit.fontawesome.com/b79b8b1ac4.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./main.js"></script>
+  </body>
 </html>
