--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="job">
           <div class="company-logo">
-            <a href="https://http://moove-it.com/" target="_blank">
+            <a href="https://moove-it.com/" target="_blank">
               <img src="./images/moove-it-logo.png" alt="Moove It logo" />
             </a>
           </div>
