Change Cheve Stickies url
  Change Heroku Cheve Stickies url with AWS update url.

--- a/websites/index.html
+++ b/websites/index.html
@@ -133,7 +133,7 @@
 
         <div class="col">
           <div class="card img-wrap">
-            <a href="https://moovecamp-app.herokuapp.com/">
+            <a href="https://main.d2xn77r8cs4730.amplifyapp.com/">
               <img
                 src="../images/cheve-stickies.png"
                 class="card-img-top"
