--- a/websites/index.html
+++ b/websites/index.html
@@ -4,181 +4,167 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Angeles' icon" href="../images/favicon_io/favicon.ico"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css"
-    rel="stylesheet"/>
+    <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="style.css">
   <title>Portfolio</title>
 </head>
 <body>
-  <main>
-    <div class="container">
-      <h1>My Portfolio</h1>
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-
-        <div class="col">
-          <div class="card img-wrap">
-            <a href="./coffee-road/">
-              <img
-                src="../images/coffe-road-main-image.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="img-description">
-                <div class="img-text">
-                  <h4>
-                    Coffee Road
-                  </h4>
-                  <p>
-                    A simple website to know more about
-                    the Coffee Cultural Landscape.
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card img-wrap">
-            <a href="./duzce-tentacion/">
-              <img
-                src="../images/duzce-tentation-main-image.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="img-description">
-                <div class="img-text">
-                  <h4>
-                    Düzce Tentación
-                  </h4>
-                  <p>
-                    A bakery's website to make orders
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-
-
-        <div class="col">
-          <div class="card img-wrap">
-            <a href="./travelers/">
-              <img
-                src="../images/travelers-main-image.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="img-description">
-                <div class="img-text">
-                  <h4>
-                    Travelers
-                  </h4>
-                  <p>
-                    The Social Network prototype, Travelers.
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card img-wrap">
-            <a href="./luxury-presence/">
-              <img
-                src="../images/luxury-presence-main-image.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="img-description">
-                <div class="img-text">
-                  <h4>
-                    Luxury Presence
-                  </h4>
-                  <p>
-                    Single Page website.
-                  </p>
-                </div>
-              </div>
-            </a> 
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card img-wrap">
-            <a href="https://main.d3snbepfb00c8a.amplifyapp.com/">
-              <img
-                src="../images/spotify-app-logo.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="img-description">
-                <div class="img-text">
-                  <h4>
-                    Spotify search app
-                  </h4>
-                  <p>
-                    Search app using the Spotify's API.
-                  </p>
-                </div>
-              </div>
-            </a> 
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card img-wrap">
-            <a href="https://main.d2xn77r8cs4730.amplifyapp.com/">
-              <img
-                src="../images/cheve-stickies.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="img-description">
-                <div class="img-text">
-                  <h4>
-                    Post it app.
-                  </h4>
-                  <p>
-                    Post it app to save all your thoughts and to-dos.
-                  </p>
-                </div>
-              </div>
-            </a> 
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card img-wrap">
-            <a href="../">
-              <img
-                src="../images/mountain-aesthetic-donna-ceraulo.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="img-description">
-                <div class="img-text black-image">
-                  <h4>
-                    Go back to the main page.
-                  </h4>
-                </div>
-              </div>
-            </a> 
-          </div>
-        </div>
-
+  <section>
+    <div class="content transition-down">
+      <div class="title set-visibility">
+        <h1>Portfolio</h1>
+        <h2>Welcome</h2>
       </div>
     </div>
-  </main>
+  </section>
 
-  <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js">
-  </script>
+  <section>
+    <div class="content-projects">
+      <div class="first-row">
+        <div class="card img-wrap">
+          <a href="./coffee-road/">
+            <img
+              src="../images/coffe-road-main-image.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="img-description">
+              <div class="img-text">
+                <h3>
+                  Coffee Road
+                </h3>
+                <p>
+                  A simple website to know more about
+                  the Coffee Cultural Landscape.
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card img-wrap">
+          <a href="./duzce-tentacion/">
+            <img
+              src="../images/duzce-tentation-main-image.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="img-description">
+              <div class="img-text">
+                <h3>
+                  Düzce Tentación
+                </h3>
+                <p>
+                  A bakery's website to make orders
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="second-row">
+        <div class="card img-wrap">
+          <a href="./travelers/">
+            <img
+              src="../images/travelers-main-image.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="img-description">
+              <div class="img-text">
+                <h3>
+                  Travelers
+                </h3>
+                <p>
+                  The Social Network prototype, Travelers.
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card img-wrap">
+          <a href="./luxury-presence/">
+            <img
+              src="../images/luxury-presence-main-image.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="img-description">
+              <div class="img-text">
+                <h3>
+                  Luxury Presence
+                </h3>
+                <p>
+                  Single Page website.
+                </p>
+              </div>
+            </div>
+          </a> 
+        </div>
+      </div>
+      <div class="third-row">
+        <div class="card img-wrap">
+          <a href="https://main.d3snbepfb00c8a.amplifyapp.com/">
+            <img
+              src="../images/spotify-app-logo.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="img-description">
+              <div class="img-text">
+                <h3>
+                  Spotify search app
+                </h3>
+                <p>
+                  Search app using the Spotify's API.
+                </p>
+              </div>
+            </div>
+          </a> 
+        </div>
+        <div class="card img-wrap">
+          <a href="https://main.d2xn77r8cs4730.amplifyapp.com/">
+            <img
+              src="../images/cheve-stickies.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="img-description">
+              <div class="img-text">
+                <h3>
+                  Post it app.
+                </h3>
+                <p>
+                  Post it app to save all your thoughts and to-dos.
+                </p>
+              </div>
+            </div>
+          </a> 
+        </div>
+      </div>
+      <div class="fourth-row">
+        <div class="card img-wrap">
+          <a href="../">
+            <img
+              src="../images/mountain-aesthetic-donna-ceraulo.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="img-description">
+              <div class="img-text black-image">
+                <h3>
+                  Go back to the main page.
+                </h3>
+              </div>
+            </div>
+          </a> 
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="./main.js"></script>
 </body>
 </html>
