--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="#work">Work</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a href="./websites/">Portfolio</a>
+          <a href="./portfolio/">Portfolio</a>
         </div>
       </div>
     </section>
