Update years of experience

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 time I can solve a very hard problem. 👩🏽‍💻
               </span>
               <span>
-                So far I have 2 years of experience and I believe I will be coding
+                So far I have over 2 years of experience and I believe I will be coding
                 until I get old. 👵🏼
               </span>
             </p>
